--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_HOST=sql10.freemysqlhosting.net
-DB_USER=sql10742164
-DB_PASSWORD=VIzTjACUcX
-DB_NAME=sql10742164
-DB_PORT=3306
+DB_HOST=junction.proxy.rlwy.net
+DB_USER=root
+DB_PASSWORD=MCofffosNizzNeqQNdESYZXTqDeRUEIc
+DB_NAME=railway
+DB_PORT=59463
